Fix generation chart alignment for Narrative Web Tranquil style sheet.
svn: r8438

--- a/src/data/main5.css
+++ b/src/data/main5.css
@@ -280,7 +280,7 @@ TD.note {
 #sourcerefs { }
 #weblinks { }
 
-.box    { font-size: 12px; height: 48px; padding-left: 5px; vertical-align: middle;}
+.box    { font-size: 12px; height: 48px; padding-left: 5px; vertical-align: middle; text-align: left;}
 .bvline { position: absolute; background-color: #000000; font-size: 0pt; z-index: 3; height: 1px;}
 .bhline { position: absolute; background-color: #000000; font-size: 0pt; z-index: 3; width: 1px;}
 .border { position: absolute; background-color: #000000; font-size: 0pt; z-index: 4; width: 160px; height: 50px; }
